# c-compiler

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.ps1  run_test.ps1  temp.s  test.c
debian/: changelog  control  copyright
include/: ast_printer.h  codegen.h  lexer.h  semantic.h
lib/: ast_printer.cpp  codegen.cpp  semantic.cpp
src/: ast.h  ast_printer.cpp  ast_printer.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semantic.cpp  semantic.h
tests/: compiler_output.txt  error_test.mc  hello.mc  loops.mc  loops_phases.txt  test.c  test.s  test_func.c  test_io.c  test_io.s  test_lex_err.c  test_sem_err.c
